--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Welcome to Tomcat Maven Application Home Page!</h1>
+        <h1>Welcome to Fidal's Tomcat Maven Application Home Page!</h1>
         <p>This is forked from https://github.com/AKSarav/TomcatMavenApp</p>
         <p>This is created as part of jenkins demo</p>
     </body>
